[gd_scene load_steps=16 format=2]

[ext_resource path="res://ka1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://Assets/LevelSelectBackground.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.239216, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.741176, 0.231373, 0.14902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=12]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.0117647, 0.235294, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.164706, 0.184314, 0.454902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.423529, 0.152941, 0.258824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.8, 0.235294, 0.458824, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="LevelSelection" type="Node2D" groups=["Buttons"]]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 54.9999
margin_top = 14.0
margin_right = 156.0
margin_bottom = 28.0
rect_scale = Vector2( 18, 18 )
custom_fonts/normal_font = SubResource( 2 )
text = "Level Select"

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 210.0
margin_top = 300.0
margin_right = 360.0
margin_bottom = 364.0
rect_scale = Vector2( 10, 10 )

[node name="LavaZoneButton" type="Button" parent="Buttons" groups=["Buttons"]]
margin_right = 150.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Lava Zone"

[node name="MidnightZoneButton" type="Button" parent="Buttons" groups=["Buttons"]]
margin_top = 17.0
margin_right = 150.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Midnight Zone"

[node name="UnderwaterDeadzoneButton" type="Button" parent="Buttons" groups=["Buttons"]]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Underwater Zone"

[node name="CoralReef" type="Button" parent="Buttons" groups=["Buttons"]]
margin_top = 51.0
margin_right = 150.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Coral Zone"

[connection signal="pressed" from="Buttons/LavaZoneButton" to="." method="_on_LavaZoneButton_pressed"]
[connection signal="pressed" from="Buttons/MidnightZoneButton" to="." method="_on_MidnightZoneButton_pressed"]
[connection signal="pressed" from="Buttons/UnderwaterDeadzoneButton" to="." method="_on_UnderwaterDeadzoneButton_pressed"]
[connection signal="pressed" from="Buttons/CoralReef" to="." method="_on_CoralReef_pressed"]
